# flaskapp

./: PKG-INFO  README.md  fibsvc.conf  requirements.txt  setup.cfg  setup.py
fib/: app.py  conf.py  fib_p.py  fib_svc.py  msg_template.py  test.py
fib_c/: Makefile  fib_c.c
spec/: fib.spec
systemd/: fib-api.service  fib-svc.service  fib.service
