[metadata]
name = fib
summary = fib service
author = SXL
classifier =
     Environment :: Web service
     Intended Audience :: Information Technology
     Intended Audience :: System Administrator
     License :: OSI Approved :: Apache Software License
     Operating System :: POSIX :: Linux
     Programming Language :: Python
     Programming Language :: Python :: 2
     Programming Language :: Python :: 2.7

[files]

[extras]

[entry_points]

